# repo-health-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/repo_health_cli/: __init__.py  __main__.py  analyzer.py  cli.py
tests/: test_analyzer.py
